fix: CLIN-929 alignement des HC

--- a/src/views/screens/variant/OccurrenceDrawer/index.module.scss
+++ b/src/views/screens/variant/OccurrenceDrawer/index.module.scss
@@ -1,7 +1,10 @@
 .occurenceDrawer {
   .description {
-    span[class$="-item-label"] {
+    span[class$='-item-label'] {
       width: 50%;
+    }
+    .hcCountLink {
+      height: 22px;
     }
   }
 
